--- a/app/src/main/res/layout/activity_daily_add.xml
+++ b/app/src/main/res/layout/activity_daily_add.xml
@@ -58,12 +58,14 @@
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vp_daily_card"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="398dp"
             android:layout_marginTop="27dp"
+            android:layout_marginBottom="180dp"
             android:clipChildren="false"
             android:clipToPadding="false"
-            android:paddingHorizontal="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/v_line" />
 
@@ -72,14 +74,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
+            android:layout_marginBottom="55dp"
             android:foregroundGravity="center"
-            app:layout_constraintTop_toBottomOf="@id/vp_daily_card"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:dotsColor="@color/gray200"
             app:dotsSize="12dp"
             app:dotsSpacing="6dp"
             app:dotsWidthFactor="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/vp_daily_card"
             app:selectedDotColor="@color/main1" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -87,7 +90,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="91dp"
+            android:layout_marginTop="55dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="34dp"
             android:background="@drawable/shape_black_fill_20_rect"
@@ -97,7 +100,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/vp_daily_card" />
+            app:layout_constraintTop_toBottomOf="@id/di_daily_indicator" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
