--- a/app/src/main/res/layout/activity_happy_add_list.xml
+++ b/app/src/main/res/layout/activity_happy_add_list.xml
@@ -9,7 +9,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/background">
 
         <ImageView
             android:id="@+id/iv_happy_add_back_arrow"
@@ -23,71 +24,26 @@
 
         <TextView
             android:id="@+id/tv_happy_add_title"
-            style="@style/head3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
             android:text="@string/happy_add_title"
+            android:textAppearance="@style/body1"
             app:layout_constraintBottom_toBottomOf="@id/iv_happy_add_back_arrow"
             app:layout_constraintStart_toEndOf="@id/iv_happy_add_back_arrow"
             app:layout_constraintTop_toTopOf="@id/iv_happy_add_back_arrow" />
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/cg_happy_add_category_button"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_happy_add_list_chip"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
             android:layout_marginTop="23dp"
-            app:chipSpacing="6dp"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_happy_add_title"
-            app:singleLine="true"
-            app:singleSelection="true">
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_item_happy_all"
-                style="@style/Style.Material3.Chip.Softie.Type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/chip_item_happy_all" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_item_happy_relationship"
-                style="@style/Style.Material3.Chip.Softie.Type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/chip_item_happy_relationship" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_item_happy_all_one_growth"
-                style="@style/Style.Material3.Chip.Softie.Type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/chip_item_happy_all_one_growth" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_item_happy_resilience"
-                style="@style/Style.Material3.Chip.Softie.Type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/chip_item_happy_resilience" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_item_happy_new_me"
-                style="@style/Style.Material3.Chip.Softie.Type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/chip_item_happy_new_me" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_item_happy_mindfulness"
-                style="@style/Style.Material3.Chip.Softie.Type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/chip_item_happy_mindfulness" />
-
-        </com.google.android.material.chip.ChipGroup>
+            tools:listitem="@layout/item_happy_add_list_chip" />
 
         <com.google.android.material.divider.MaterialDivider
             android:id="@+id/md_happy_add_list_divider"
@@ -95,24 +51,15 @@
             android:layout_height="1dp"
             android:layout_marginTop="12dp"
             app:dividerColor="@color/gray100"
+            app:layout_constraintBottom_toTopOf="@id/rv_happy_add_list"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cg_happy_add_category_button" />
-
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fcv_happy_add_list"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/md_happy_add_list_divider"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/rv_happy_add_list_chip" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_happy_add_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="12dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
