--- a/app/src/main/res/layout/fragment_happy_progress.xml
+++ b/app/src/main/res/layout/fragment_happy_progress.xml
@@ -82,8 +82,8 @@
 
             <ImageView
                 android:id="@+id/iv_happy_progress_card_front"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
